# symrs

./: .gitignore  Cargo.toml  build.sh
examples/: intro.rs
src/: doc-mod.template  doc.template  errors.rs  lib.rs  mod.template  prelude.rs  tmpl.yaml
src-old/: core.rs
src-old/expressions/irreducibles/: mod.rs
src-old/expressions/operations/: mod.rs
src-old/expressions/operations/elementary/: mod.rs
src/core/: attribute.rs  computation.rs  expression.rs  kernel.rs  structure.rs
src/docs/: crate.md
src/expressions/: mod.rs
src/expressions/irreducibles/: symbol.rs
src/expressions/operations/elementary/: addition.rs  multiplication.rs
src/pylib/: io.py  misc.py
src/structures/irreducibles/: mod.rs
src/structures/operations/: mod.rs  operation.template
src/yaml/: core.yaml  structures.yaml
src/yaml/structures/: irreducibles.yaml  operations.yaml
src/yaml/structures/operations/: elementary.yaml  logical.yaml  trigonometric.yaml
src/yaml/structures/operations/elementary/: addition.yaml  division.yaml  exponentiation.yaml  logarithm.yaml  modulo.yaml  modulus.yaml  multiplication.yaml  negation.yaml  radical.yaml  subtraction.yaml
src/yaml/structures/operations/logical/: alternativedenial.yaml  biconditional.yaml  conjunction.yaml  converseimplication.yaml  conversenonimplication.yaml  exclusivedisjunction.yaml  implication.yaml
src/yaml/structures/operations/trigonometric/: arccosecant.yaml
