[package]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A symbolic mathematics library for Rust."
edition     = "2018"
name        = "symrs"
publish     = false
readme      = "README.md"
version     = "0.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "build/katex.html" ]

[lib]
name = "symrs"
path = "build/lib.rs"